# ICEFLIX-FILESERVICE

./: .gitignore  README.md  dockerfile  run_service  setup.cfg  setup.py
configs/: fileservice.config
iceflix/: file.py  functions_topics.py  iceflix.ice
tests/: test_example.py
