[metadata]
name = IceFlix Template
version = 1.0.0
description = Template package to use in the IceFlix laboratory

[options]
packages = find:
install_requires =
    zeroc-ice>=3.7.0

[options.package_data]
* = *.ice

[options.entry_points]
console_scripts =
    iceflix-file = iceflix.cli:file_service